change background-color of the body container

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <div class="title">Comic Strip 3.0</div>
       <div class="topRow">
         <div class="section">
-            <img src="\In_class_labs\comic_book_strip\Michael-1.jpg" alt="" class="fillerPic">
+            <img src="\Michael-1.jpg" alt="" class="fillerPic">
         </div>
         <div class="section">
-            <img src="\In_class_labs\comic_book_strip\pam1.jpg" alt="" class="fillerPic">
+            <img src="\pam1.jpg" alt="" class="fillerPic">
         </div>
         <div class="section">
-            <img src="\In_class_labs\comic_book_strip\Michael-1.jpg" alt="" class="fillerPic">
+            <img src="\Michael-1.jpg" alt="" class="fillerPic">
         </div>
       </div>
       <div class="txter">
@@ -29,13 +29,13 @@
       </div>
       <div class="bottomRow">
         <div class="section">
-            <img src="\In_class_labs\comic_book_strip\pam1.jpg" alt="" class="fillerPic" >
+            <img src="pam1.jpg" alt="" class="fillerPic" >
         </div>
         <div class="section">
-            <img src="\In_class_labs\comic_book_strip\Michael-2.jpg" alt="" class="fillerPic">
+            <img src="Michael-2.jpg" alt="" class="fillerPic">
         </div>
         <div class="section">
-            <img src="\In_class_labs\comic_book_strip\pam2.jpg" alt="" class="fillerPic">
+          <img src="pam1.jpg" alt="" class="fillerPic" >
         </div>
       </div>
       <div class="txter">
